--- a/.asf.yaml
+++ b/.asf.yaml
@@ -61,7 +61,7 @@ github:
         # contexts are the names of checks that must pass
         contexts:
           - check
-          - docker-release
+          - docker-build
           - frontend-build
           - python-lint (3.7)
           - test-mysql (3.7)
@@ -72,3 +72,5 @@ github:
         dismiss_stale_reviews: false
         require_code_owner_reviews: true
         required_approving_review_count: 1
+      
+      required_signatures: true
